--- a/composer.json
+++ b/composer.json
@@ -11,21 +11,21 @@
     }
   },
   "require": {
-    "spryker/application": "^1.0.0-RC2",
-    "spryker/glossary": "^1.0.0-RC2",
-    "spryker/gui": "^1.0.0-RC2",
-    "spryker/kernel": "^1.0.0-RC2",
-    "spryker/library": "^1.0.0-RC2",
-    "spryker/mail": "^1.0.0-RC2",
-    "spryker/oms": "^1.0.0-RC2",
-    "spryker/zed-request": "^1.0.0-RC2",
-    "spryker/guzzle": "^1.0.0-RC2",
-    "spryker/propel": "^1.0.0-RC2",
-    "spryker/symfony": "^1.0.0-RC2",
-    "spryker/country": "^1.0.0-RC2",
-    "spryker/customer": "^1.0.0-RC2",
-    "spryker/sales": "^1.0.0-RC2",
-    "spryker/url": "^1.0.0-RC2",
+    "spryker/application": "^2.0.0",
+    "spryker/glossary": "^2.0.0",
+    "spryker/gui": "^2.0.0",
+    "spryker/kernel": "^2.0.0",
+    "spryker/library": "^2.0.0",
+    "spryker/mail": "^2.0.0",
+    "spryker/oms": "^2.0.0",
+    "spryker/zed-request": "^2.0.0",
+    "spryker/guzzle": "^2.0.0",
+    "spryker/propel": "^2.0.0",
+    "spryker/symfony": "^2.0.0",
+    "spryker/country": "^2.0.0",
+    "spryker/customer": "^2.0.0",
+    "spryker/sales": "^2.0.0",
+    "spryker/url": "^2.0.0",
     "braintree/braintree_php" : "~3.9.0"
   },
   "description": "braintree bundle",
@@ -34,7 +34,7 @@
   "prefer-stable": true,
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0.x-dev"
+      "dev-master": "2.0.x-dev"
     }
   }
 }
