--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,8 @@
   "autoload": {
     "psr-0": {
       "Spryker": "src/",
-      "Acceptance": "tests/",
-      "Function": "tests/",
-      "Integration": "tests/",
-      "Unit": "tests/",
-      "YvesUnit": "tests/"
+      "Functional": "tests/",
+      "Unit": "tests/"
     }
   },
   "require": {
