--- a/composer.json
+++ b/composer.json
@@ -8,22 +8,25 @@
     }
   },
   "require": {
+    "braintree/braintree_php" : "~3.13.0",
     "spryker/application": "^2.0.0",
-    "spryker/glossary": "^2.0.0",
+    "spryker/checkout": "^2.1.3",
+    "spryker/config": "^2.0.0",
+    "spryker/country": "^2.0.0",
+    "spryker/customer": "^2.0.0",
     "spryker/gui": "^2.0.0",
+    "spryker/guzzle": "^2.0.0",
     "spryker/kernel": "^2.0.0",
     "spryker/library": "^2.0.0",
     "spryker/mail": "^2.0.0",
     "spryker/oms": "^2.0.0",
-    "spryker/zed-request": "^2.0.0",
-    "spryker/guzzle": "^2.0.0",
+    "spryker/payment": "^2.0.0",
     "spryker/propel": "^2.0.0",
     "spryker/symfony": "^2.0.0",
-    "spryker/country": "^2.0.0",
-    "spryker/customer": "^2.0.0",
+    "spryker/step-engine": "^1.0.1",
     "spryker/sales": "^2.0.0",
-    "spryker/url": "^2.0.0",
-    "braintree/braintree_php" : "~3.13.0"
+    "spryker/transfer": "^2.0.0",
+    "spryker/url": "^2.0.0"
   },
   "description": "braintree bundle",
   "license": "proprietary",
