--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "spryker/kernel": "^2.0.0",
     "spryker/library": "^2.0.0",
     "spryker/mail": "^2.0.0",
-    "spryker/oms": "^2.0.0",
+    "spryker/oms": "^2.0.0 || ^3.0.0",
     "spryker/payment": "^2.0.0",
     "spryker/propel": "^2.0.0",
     "spryker/symfony": "^2.0.0",
