--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     }
   },
   "require": {
-    "braintree/braintree_php" : "~3.14.0",
+    "braintree/braintree_php": "~3.14.0",
     "spryker/application": "^2.0.0",
     "spryker/checkout": "^2.1.3",
     "spryker/config": "^2.0.0",
@@ -22,13 +22,13 @@
     "spryker/oms": "^2.0.0 || ^3.0.0",
     "spryker/payment": "^2.0.0",
     "spryker/propel": "^2.0.0",
-    "spryker/symfony": "^2.0.0",
-    "spryker/step-engine": "^1.0.1",
     "spryker/sales": "^2.0.0",
+    "spryker/step-engine": "^1.0.1",
+    "spryker/symfony": "^2.0.0",
     "spryker/transfer": "^2.0.0",
     "spryker/url": "^2.0.0"
   },
-  "description": "braintree bundle",
+  "description": "Braintree bundle",
   "license": "proprietary",
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -36,5 +36,8 @@
     "branch-alias": {
       "dev-master": "2.0.x-dev"
     }
+  },
+  "config": {
+    "sort-packages": true
   }
 }
