Added Braintree Acceptance tests Added Codeception modules in several bundles Fixed wrong const usage in Braintree Updated braintree/braintree_lib to 3.15

--- a/config/config_default.php.dist
+++ b/config/config_default.php.dist
@@ -12,7 +12,7 @@ $config[BraintreeConstants::PUBLIC_KEY] = '';
 $config[BraintreeConstants::PRIVATE_KEY] = '';
 $config[BraintreeConstants::ENVIRONMENT] = '';
 $config[BraintreeConstants::ACCOUNT_ID] = '';
-$config[BraintreeConstants::ACCOUNT_UNIQUE_IDENTIFIER] = '';​
+$config[BraintreeConstants::ACCOUNT_UNIQUE_IDENTIFIER] = '';
 $config[BraintreeConstants::IS_VAULTED] = true;
 $config[BraintreeConstants::IS_3D_SECURE] = true;
 
