--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,16 @@
   "autoload": {
     "psr-0": {
       "Spryker": "src/",
+      "Acceptance": "tests/",
       "Functional": "tests/",
       "Unit": "tests/"
+    },
+    "psr-4": {
+      "Braintree\\Module\\": "tests/"
     }
   },
   "require": {
-    "braintree/braintree_php": "~3.14.0",
+    "braintree/braintree_php": "3.15.0",
     "spryker/application": "^2.0.0",
     "spryker/checkout": "^2.1.3",
     "spryker/config": "^2.0.0",
