--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     }
   },
   "require": {
-    "braintree/braintree_php": "3.15.0",
+    "braintree/braintree_php": "~3.15.0",
     "spryker/application": "^2.0.0",
     "spryker/checkout": "^2.1.3",
     "spryker/config": "^2.0.0",
