Add missing method in factory. And missing dependency added.

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "spryker/payment": "^2.0.0",
     "spryker/propel": "^2.0.0",
     "spryker/sales": "^2.0.0",
+    "spryker/sales-aggregator": "^1.0.0 || ^2.0.0",
     "spryker/step-engine": "^1.0.1",
     "spryker/symfony": "^2.0.0",
     "spryker/transfer": "^2.0.0",
